# ImgGroupX

./: README.EN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
Docs/: 功能清单.md  开发指南.md  技术架构.md  项目概述.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CompareViewer.vue  ControlBar.vue  FilterSortBar.vue  FolderGroup.vue  FolderPanel.vue  GridItem.vue  GridView.vue  ImageViewer.vue  LoadPanel.vue  OperationBar.vue  SelectionBar.vue  SettingsPanel.vue
src/i18n/: index.ts
src/stores/: imageStore.ts
src/types/: index.ts
src/utils/: shortcuts.ts
