[package]
name = "imggroup"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "imggroup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
base64 = "0.22"
imagesize = "0.12"
image = { version = "0.25", default-features = false, features = ["png", "tiff"] }
pcx = "0.2"
jxl-oxide = { version = "0.12", features = ["image"] }
exif = { package = "kamadak-exif", version = "0.5" }
chrono = "0.4"
trash = "5"
notify = "7"

